<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_bg_default" >

    <include
        android:id="@+id/top"
        layout="@layout/top_bar_layout" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_sytem"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/machine_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/label_machine_soft_version"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/boost_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/machine_version"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/label_boost_version"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/loader_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/boost_version"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/label_release_date"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/hardware_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loader_version"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/label_database_version"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/mac_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hardware_version"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/label_lib_version"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mac_id"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/label_client_version"
            android:textColor="#000000"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>